--- a/mailer/Dockerfile
+++ b/mailer/Dockerfile
@@ -1,4 +1,5 @@
 FROM node:16.14.2
+
 RUN npm install -g nodemon
 
 WORKDIR /app
@@ -7,6 +8,10 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 COPY package.json ./
 COPY package-lock.json ./
+
 RUN npm i --silent
 
-COPY . ./
+COPY prisma ./prisma
+RUN npx prisma generate
+
+COPY . .
