--- a/mailer/package.json
+++ b/mailer/package.json
@@ -13,6 +13,7 @@
   },
   "keywords": [],
   "dependencies": {
+    "@prisma/client": "^4.14.0",
     "async": "^3.2.4",
     "axios": "^1.5.1",
     "body-parser": "^1.19.2",
@@ -21,9 +22,9 @@
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.7.8",
-    "prisma": "^5.12.0",
-    "@prisma/client": "^4.14.0"
+    "prisma": "^5.12.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -32,6 +33,7 @@
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.35",
+    "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.6",
     "concurrently": "^7.2.0",
     "nodemon": "^2.0.15",
