--- a/business/package.json
+++ b/business/package.json
@@ -2,11 +2,11 @@
   "name": "business",
   "version": "0.1.0",
   "description": "Business service for LodlStock",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
     "start": "node build/index.js",
-    "dev": "tsx watch index",
+    "dev": "tsx watch src/index",
     "watch": "npx tsc --watch",
     "server": "npx tsc && npm run dev",
     "server:watch": "concurrently --kill-others \"npm run watch\" \"npm run dev\""
@@ -21,7 +21,6 @@
     "express": "^4.17.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemailer": "^6.7.8",
     "prisma": "^5.12.0",
     "@prisma/client": "^4.14.0"
   },
