Moved some files around

--- a/mailer/Dockerfile
+++ b/mailer/Dockerfile
@@ -1,6 +1,5 @@
 FROM node:16.14.2
 
-RUN chown -R node:node /root/.npm
 RUN su node
 
 RUN npm install -g nodemon
@@ -11,13 +10,12 @@ ENV PATH /app/node_modules/.bin:$PATH
 
 COPY mailer/package.json ./
 COPY mailer/package-lock.json ./
+RUN npm i
+COPY mailer .
 
 # Copy global prisma schema into project
 COPY db/schema.prisma ./prisma/schema.prisma
-
-RUN npm i --silent
-
-COPY mailer/prisma ./prisma
 RUN npx prisma generate
 
-COPY . .
+RUN su
+RUN chown -R node:node "/root/.npm"
