--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,22 @@
 version: "3.8"
 services:
-  auth:
-    hostname: auth
-    build: auth/
-    volumes:
-      - './auth/:/app'
-      - '/app/node_modules'
-    environment:
-      PORT: 5000
-    ports:
-      - "5000:5000"
-    depends_on:
-      - mariadb
-    command: bash -c "npm run server"
-    networks:
-      - db_auth
-      - auth_business
-      - auth_mailer
+  # auth:
+  #   hostname: auth
+  #   build: auth/
+  #   volumes:
+  #     - './auth/:/app'
+  #     - '/app/node_modules'
+  #   environment:
+  #     PORT: 5000
+  #   ports:
+  #     - "5000:5000"
+  #   depends_on:
+  #     - mariadb
+  #   command: bash -c "npm run server"
+  #   networks:
+  #     - db_auth
+  #     - auth_business
+  #     - auth_mailer
 
   business:
     hostname: business
@@ -33,7 +33,7 @@ services:
       - "5001:5001"
     depends_on:
       - mariadb
-      - auth
+      # - auth
     command: bash -c "npx prisma db push --accept-data-loss && npm run server:watch"
     networks:
       - db_business
@@ -45,7 +45,7 @@ services:
       dockerfile: mailer/Dockerfile
       context: ./
     volumes:
-      - './mailer/:/app'
+      - './mailer/src:/app/src'
       - '/app/node_modules'
     environment:
       PORT: 5002
@@ -56,8 +56,9 @@ services:
       - "5002:5002"
     depends_on:
       - mariadb
-      - auth
-    command: bash -c "npx prisma db push ; npm run server:watch"
+      - business
+      # - auth
+    command: bash -c "npx prisma db push --accept-data-loss ; npm run server:watch"
     networks:
       - db_mailer
       - auth_mailer
