--- a/mailer/package.json
+++ b/mailer/package.json
@@ -2,11 +2,11 @@
   "name": "mailer",
   "version": "0.1.0",
   "description": "Mailer service for LodlStock",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
     "start": "node build/index.js",
-    "dev": "tsx watch index",
+    "dev": "tsx watch src/index",
     "watch": "npx tsc --watch",
     "server": "npx tsc && npm run dev",
     "server:watch": "concurrently --kill-others \"npm run watch\" \"npm run dev\""
