--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,22 @@ version: "3.8"
 services:
   auth:
     hostname: auth
-    build: 
+    build:
       dockerfile: auth/Dockerfile
       context: ./
     volumes:
       - './auth/src:/app/src'
       - '/app/node_modules'
     environment:
-      PORT: 5000
-      DATABASE_URL: mysql://lodl-admin:changeme@mariadb:3306/lodl-stock
+      PORT: ${AUTH_PORT}
+      DATABASE_URL: mysql://${DB_USER}:${DB_PASSWORD}@mariadb:3306/${DB_DATABASE}
     ports:
-      - "5000:5000"
+      - "${AUTH_PORT}:${AUTH_PORT}"
     depends_on:
       - mariadb
-    command: bash -c "npm run server:watch"
+    # Auth service should start first after db service, so let it update
+    # database schema
+    command: bash -c "npx prisma db push --accept-data-loss && npm run server:watch"
     networks:
       - db_auth
       - auth_business
@@ -30,14 +32,14 @@ services:
       - './business/src:/app/src'
       - '/app/node_modules'
     environment:
-      PORT: 5001
-      DATABASE_URL: mysql://lodl-admin:changeme@mariadb:3306/lodl-stock
+      PORT: ${BUSINESS_PORT}
+      DATABASE_URL: mysql://${DB_USER}:${DB_PASSWORD}@mariadb:3306/${DB_DATABASE}
     ports:
-      - "5001:5001"
+      - "${BUSINESS_PORT}:${BUSINESS_PORT}"
     depends_on:
       - mariadb
-      # - auth
-    command: bash -c "npx prisma db push --accept-data-loss && npm run server:watch"
+      - auth
+    command: bash -c "npm run server:watch"
     networks:
       - db_business
       - auth_business
@@ -51,17 +53,17 @@ services:
       - './mailer/src:/app/src'
       - '/app/node_modules'
     environment:
-      PORT: 5002
-      DATABASE_URL: mysql://lodl-admin:changeme@mariadb:3306/lodl-stock
-      user: ${user}
-      pass: ${pass}
+      PORT: ${MAILER_PORT}
+      DATABASE_URL: mysql://${DB_USER}:${DB_PASSWORD}@mariadb:3306/${DB_DATABASE}
+      mailUser: ${mailUser}
+      mailPass: ${mailPass}
     ports:
-      - "5002:5002"
+      - "${MAILER_PORT}:${MAILER_PORT}"
     depends_on:
       - mariadb
       - business
-      # - auth
-    command: bash -c "npx prisma db push --accept-data-loss ; npm run server:watch"
+      - auth
+    command: bash -c "npm run server:watch"
     networks:
       - db_mailer
       - auth_mailer
@@ -69,10 +71,10 @@ services:
   mariadb:
     image: mariadb:latest
     environment:
-      MYSQL_ROOT_PASSWORD: changeme
-      MYSQL_DATABASE: lodl-stock
-      MYSQL_USER: lodl-admin
-      MYSQL_PASSWORD: changeme
+      MYSQL_USER: ${DB_USER}
+      MYSQL_PASSWORD: ${DB_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${DB_DATABASE}
     ports:
       - "3306:3306"
     networks:
