--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - mariadb
     # Auth service should start first after db service, so let it update
     # database schema
-    command: bash -c "npx prisma db push --accept-data-loss && npm run server:watch"
+    command: bash -c "sleep 10; npx prisma db push --accept-data-loss && npm run server:watch"
     networks:
       - db_auth
       - auth_business
@@ -39,7 +39,7 @@ services:
     depends_on:
       - mariadb
       - auth
-    command: bash -c "npm run server:watch"
+    command: bash -c "sleep 10; npm run server:watch"
     networks:
       - db_business
       - auth_business
@@ -63,7 +63,7 @@ services:
       - mariadb
       - business
       - auth
-    command: bash -c "npm run server:watch"
+    command: bash -c "sleep 10; npm run server:watch"
     networks:
       - db_mailer
       - auth_mailer
