--- a/mailer/package.json
+++ b/mailer/package.json
@@ -24,7 +24,8 @@
     "jsonwebtoken": "^8.5.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.7.8",
-    "prisma": "^5.12.0"
+    "prisma": "^5.12.0",
+    "prom-client": "^15.1.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
