--- a/stack.yml
+++ b/stack.yml
@@ -2,9 +2,7 @@ version: "3.8"
 services:
   auth:
     hostname: auth
-    build:
-      dockerfile: auth/Dockerfile
-      context: ./
+    image: mariateaca/lodl-stock-auth:latest
     volumes:
       - './auth/src:/app/src'
       - '/app/node_modules'
@@ -12,7 +10,7 @@ services:
       PORT: ${AUTH_PORT}
       DATABASE_URL: mysql://${DB_USER}:${DB_PASSWORD}@mariadb:3306/${DB_DATABASE}
     ports:
-      - "${AUTH_PORT}:${AUTH_PORT}"
+      - "5000:5000"
     depends_on:
       - mariadb
     # Auth service should start first after db service, so let it update
@@ -26,9 +24,7 @@ services:
 
   business:
     hostname: business
-    build:
-      dockerfile: business/Dockerfile
-      context: ./
+    image: mariateaca/lodl-stock-business:latest
     volumes:
       - './business/src:/app/src'
       - '/app/node_modules'
@@ -36,7 +32,7 @@ services:
       PORT: ${BUSINESS_PORT}
       DATABASE_URL: mysql://${DB_USER}:${DB_PASSWORD}@mariadb:3306/${DB_DATABASE}
     ports:
-      - "${BUSINESS_PORT}:${BUSINESS_PORT}"
+      - "5001:5001"
     depends_on:
       - mariadb
       - auth
@@ -48,9 +44,7 @@ services:
 
   mailer:
     hostname: mailer
-    build:
-      dockerfile: mailer/Dockerfile
-      context: ./
+    image: mariateaca/lodl-stock-mailer:latest
     volumes:
       - './mailer/src:/app/src'
       - '/app/node_modules'
@@ -60,7 +54,7 @@ services:
       mailUser: ${mailUser}
       mailPass: ${mailPass}
     ports:
-      - "${MAILER_PORT}:${MAILER_PORT}"
+      - "5002:5002"
     depends_on:
       - mariadb
       - business
@@ -72,6 +66,8 @@ services:
       - prometheus
 
   mariadb:
+    deploy:
+      replicas: 1
     image: mariadb:latest
     environment:
       MYSQL_USER: ${DB_USER}
@@ -85,7 +81,6 @@ services:
       - db_admin
       - db_auth
       - db_mailer
-    restart: on-failure
     volumes:
       - db-mariadb:/var/lib/mysql
 
