--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
           key: ${{secrets.SSH_PRIVATE_KEY}}
           host: ${{secrets.DOCKER_PG_URL}}
           script: |
-            run: docker swarm init --advertise-addr ${{secrets.DOCKER_PG_PRIV_URL}}
-            run: docker compose -f stack.yml build
-            run: docker stack deploy --compose-file stack.yml lodl-stock
+            ip a s
+            docker swarm init --advertise-addr ${{secrets.DOCKER_PG_PRIV_URL}}
+            echo "Swarm init"
+            docker compose -f stack.yml build
+            echo "Stack built"
+            docker stack deploy --compose-file stack.yml lodl-stock
+            echo "Stack deployed!"
