--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ on:
   workflow_dispatch:
 
 jobs:
+  pull-code:
+    uses: ./.github/workflows/pull.yaml
+    secrets: inherit
   build:
     runs-on: ubuntu-latest
 
