--- a/.github/workflows/pull.yaml
+++ b/.github/workflows/pull.yaml
@@ -12,6 +12,7 @@ jobs:
         with:
           key: ${{secrets.SSH_PRIVATE_KEY}}
           host: ${{secrets.DOCKER_PG_URL}}
+          username: ${{secrets.DOCKER_PG_USERNAME}}
           debug: true
           script: |
             ls lodl-stock || git pull https://github.com/lodl-stock/lodl-stock.git
