--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,8 +20,8 @@ jobs:
         uses: appleboy/ssh-action@v0.1.2
         with:
           key: ${{secrets.SSH_PRIVATE_KEY}}
-          host: ${{secrets.DOCKER_PG_URL}}
-          username: ${{secrets.DOCKER_PG_USERNAME}}
+          host: ${{secrets.HOST}}
+          username: ${{secrets.USER}}
           debug: true
           script: |
             ip a s
