--- a/.github/workflows/pull.yaml
+++ b/.github/workflows/pull.yaml
@@ -11,7 +11,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.2
         with:
           key: ${{secrets.SSH_PRIVATE_KEY}}
-          host: ${{secrets.DOCKER_PG_URL}}
+          host: ${{secrets.HOST}}
           debug: true
           script: |
             ls lodl-stock || git clone https://github.com/lodl-stock/lodl-stock.git
