--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,11 +20,12 @@ jobs:
         uses: appleboy/ssh-action@v0.1.2
         with:
           key: ${{secrets.SSH_PRIVATE_KEY}}
-          host: ${{secrets.DOCKER_PG_URL}}
+          host: ${{secrets.HOST}}
+          username: ${{secrets.USER}}
           debug: true
           script: |
             ip a s
-            docker swarm init --advertise-addr ${{secrets.DOCKER_PG_PRIV_URL}}
+            docker swarm init --advertise-addr ${{secrets.ADV_ADDR}}
             echo "Swarm init"
             docker compose -f stack.yml build
             echo "Stack built"
