--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -39,3 +39,7 @@ scrape_configs:
   static_configs:
   - targets:
     - mailer:5002
+
+- job_name: 'kong'
+  static_configs:
+    - targets: ['kong:8001']
