--- a/stack.yml
+++ b/stack.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   auth:
     hostname: auth
+    container_name: auth 
     image: mariateaca/lodl-stock-auth:latest
     volumes:
       - './auth/src:/app/src'
@@ -21,9 +22,11 @@ services:
       - auth_business
       - auth_mailer
       - prometheus
+      - network_kong 
 
   business:
     hostname: business
+    container_name: business
     image: mariateaca/lodl-stock-business:latest
     volumes:
       - './business/src:/app/src'
@@ -41,9 +44,11 @@ services:
       - db_business
       - auth_business
       - prometheus
+      - network_kong 
 
   mailer:
     hostname: mailer
+    container_name: mailer 
     image: mariateaca/lodl-stock-mailer:latest
     volumes:
       - './mailer/src:/app/src'
@@ -64,6 +69,7 @@ services:
       - db_mailer
       - auth_mailer
       - prometheus
+      - network_kong 
 
   mariadb:
     deploy:
@@ -85,6 +91,8 @@ services:
       - db-mariadb:/var/lib/mysql
 
   dbadmin:
+    hostname: dbadmin
+    container_name: dbadmin
     image: phpmyadmin
     depends_on:
       - mariadb
@@ -93,6 +101,7 @@ services:
       PMA_PORT: 3306
     networks:
       - db_admin
+      - network_kong 
     ports:
       - "8080:80"
 
@@ -128,6 +137,34 @@ services:
       - grafana-storage:/var/lib/grafana
     networks:
       - network_grafana
+      - network_kong 
+
+  kong:
+    image: kong:latest
+    container_name: kong 
+    depends_on:
+      - prometheus
+      - grafana
+      - mariadb
+    ports:
+      - "8000:8000"
+      - "8001:8001"
+      - "8443:8443"
+      - "8444:8444"
+    environment:
+      KONG_DATABASE: "off"
+      KONG_PROXY_ACCESS_LOG: "/dev/stdout"
+      KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
+      KONG_PROXY_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+      KONG_DECLARATIVE_CONFIG: /opt/kong/kong.yml
+    command: "kong start"
+    volumes:
+      - ./Kong:/opt/kong
+    networks:
+      - network_kong 
+      - network_grafana
 
 networks:
   db_auth:
@@ -138,6 +175,7 @@ networks:
   db_admin:
   prometheus:
   network_grafana:
+  network_kong:
 
 volumes:
   db-mariadb:
