build images on push

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,13 @@ name: Docker Build
 
 on:
   workflow_dispatch:
+  push:
+    branches: [ main ]
+    paths:
+      - './auth'
+      - './business'
+      - './mailer'
+      - './db'
 
 jobs:
   build:
